--- a/index.html
+++ b/index.html
@@ -16,17 +16,28 @@
 </head>
 
 <body>
-
-    <div class="container">
-      <div class="row">
-        <h1>Select a character </h1>
-      </div>
-
-
-    </div>
+  <div class="container center">
+  <header>
+        <h1 class="text-center">Random Character Selection </h1>
+  </header>
 
 
 
+
+        <div class="row selection">
+          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">1</button></div>
+          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">2</button></div>
+          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">3</button></div>
+
+          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">4</button></div>
+          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">5</button></div>
+          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">6</button></div>
+        </div><!-- end row -->
+        <div class="start">
+          <button class="btn btn-success ">Start Game!</button>
+        </div>
+
+</div><!-- end container -->
 </body>
 
 </html>
