--- a/page-player.html
+++ b/page-player.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css"/>
   <script src="js/jquery-3.1.1.min.js"></script>
-
+  <script src="js/chars.js"></script>
   <script src="js/bahoth.js"></script>
 
   <!-- Optional theme -->
@@ -52,14 +52,16 @@
 
         <div class="row">
           <div id="sanity" class="col-md-12 attr"></div>
-               <button id="add-sanity" class="add-stat col-xs-6 btn btn-default">+</button>
-            <button id="subt-sanity" class="subt-stat col-xs-6 btn btn-default">-</button>
+            <button id="subt-sanity" class="subt-stat col-xs-1 btn btn-default">-</button>
+               <ul id="sanity-stats" class="stats"></ul>
+               <button id="add-sanity" class="add-stat col-xs-1 btn btn-default">+</button>
         </div>
 
         <div class="row">
           <div id="knowledge" class="col-md-12 attr"></div>
-            <button id="add-knowledge" class="add-stat col-xs-6 btn btn-default">+</button>
-            <button id="subt-knowledge" class="subt-stat col-xs-6 btn btn-default">-</button>
+            <button id="subt-knowledge" class="subt-stat col-xs-1 btn btn-default">-</button>
+            <ul id="knowledge-stats" class="stats"></ul>
+            <button id="add-knowledge" class="add-stat col-xs-1 btn btn-default">+</button>
         </div>
 
       </div>
@@ -71,14 +73,16 @@
 
         <div class="row">
           <div id="might" class="col-md-12 attr"></div>
-          <button id="add-might" class="add-stat col-xs-6 btn btn-default">+</button>
-            <button id="subt-might" class="subt-stat col-xs-6 btn btn-default">-</button>
+            <button id="subt-might" class="subt-stat col-xs-1 btn btn-default">-</button>
+          <ul id="might-stats" class="stats"></ul>
+          <button id="add-might" class="add-stat col-xs-1 btn btn-default">+</button>
         </div>
 
         <div class="row">
           <div id="speed" class="col-xs-12 attr"></div>
-            <button id="add-speed" class="add-stat col-xs-6 btn btn-default">+</button>
-            <button id="subt-speed" class="subt-stat col-xs-6 btn btn-default">-</button>
+            <button id="subt-speed" class="subt-stat col-xs-1 btn btn-default">-</button>
+            <ul id="speed-stats" class="stats"></ul>
+            <button id="add-speed" class="add-stat col-xs-1 btn btn-default">+</button>
 
           </div>
  
