--- a/index.html
+++ b/index.html
@@ -7,37 +7,65 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="jquery-shopping-cart.js"></script>
+
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <div class="container center">
-  <header>
-        <h1 class="text-center">Random Character Selection </h1>
-  </header>
+    <div class="container center">
+        <header>
+            <h1 class="text-center">How many Players?</h1>
+        </header>
 
 
 
 
-        <div class="row selection">
-          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">1</button></div>
-          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">2</button></div>
-          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">3</button></div>
+        <div id="selection" class="row">
+            <form>
+                <div class="form-group">
+                    <label for="formGroupExampleInput">Player 1</label>
+                    <input type="text" name="player" class="form-control" id="formGroupExampleInput" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                    <label for="playerSelection">Player 2</label>
+                    <input type="text" name="player" class="form-control" id="playerSelection" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                    <label for="playerSelection">Player 3</label>
+                    <input type="text" name="player" class="form-control" id="playerSelection" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                    <label for="playerSelection">Player 4</label>
+                    <input type="text" name="player" class="form-control" id="playerSelection" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                    <label for="playerSelection">Player 5</label>
+                    <input type="text" class="form-control" id="playerSelection" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                    <label for="playerSelection">Player 6</label>
+                    <input type="text" name="player" class="form-control" id="playerSelection" placeholder="Your Name">
+                </div>
+                <div>
+      <input type="submit" name="g" value="Submit" id="g">
+    </div>
+            </form>
+        </div><!-- selection -->
+        <div id="reveal">
 
-          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">4</button></div>
-          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">5</button></div>
-          <div class="col-md-4 col-xs-6"><button class="btn btn-primary btn-block round">6</button></div>
-        </div><!-- end row -->
-        <div class="start">
-          <button class="btn btn-success ">Start Game!</button>
-        </div>
+        </div><!-- reveal characters -->
+        <!-- end row -->
 
-</div><!-- end container -->
+
+    </div>
+    <!-- end container -->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/bahoth.js"></script>
+    <script src="js/players.js"></script>
 </body>
 
 </html>
